improve layout of handles used for resizing windows

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <div class="logo">Mockémon</div>
     </header>
     <!-- MAIN-CONTENT -->
-    <div class="content">
+    <main>
       <div class="question-container">
         <div class="question"></div>
         <div class="question-controls">
@@ -26,11 +26,15 @@
         </div>
       </div>
       <div class="compiler">Compiler will added soon!</div>
-    </div>
+    </main>
 
     <!-- ABSOLUTE ITEMS -->
-    <div class="vertical-handle handle"></div>
-    <div class="horizontal-handle handle"></div>
+    <div class="vertical-handle handle">
+      <div class="drag-icon"></div>
+    </div>
+    <div class="horizontal-handle handle">
+      <div class="drag-icon"></div>
+    </div>
     <!-- CONTROLS -->
     <div class="draggable-widget live-controls">
       <div class="drag-indicator"></div>
