--- a/src/index.html
+++ b/src/index.html
@@ -10,34 +10,36 @@
     <header>
       <div class="logo">Mockémon</div>
     </header>
+
     <!-- MAIN-CONTENT -->
     <main>
       <div class="question-container">
-        <div class="question"></div>
+        <div class="question-content"></div>
         <div class="question-controls">
           <div class="icon change-question"></div>
         </div>
       </div>
       <div class="editor-container">
         <div class="editor"></div>
-        <div class="code-exec-controls">
+        <div class="code-controls">
           <button class="submit">Submit</button>
           <button class="run">Run</button>
         </div>
       </div>
-      <div class="compiler">Compiler will added soon!</div>
+      <div class="compiler">Compiler will be added soon!</div>
     </main>
 
-    <!-- ABSOLUTE ITEMS -->
-    <div class="vertical-handle handle">
+    <!-- Handles -->
+    <div class="vertical handle">
       <div class="drag-icon"></div>
     </div>
-    <div class="horizontal-handle handle">
+    <div class="horizontal handle">
       <div class="drag-icon"></div>
     </div>
-    <!-- CONTROLS -->
-    <div class="draggable-widget live-controls">
-      <div class="drag-indicator"></div>
+
+    <!-- Controls -->
+    <div class="live-controls">
+      <div class="drag-handle"></div>
       <div class="pointer icon on"></div>
       <div class="audio icon on"></div>
       <div class="video icon on"></div>
