refactor css and js of controls

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <div class="question-container">
         <div class="question-content"></div>
         <div class="question-controls">
-          <div class="icon change-question"></div>
+          <div class="round-icon-btn change-question"></div>
         </div>
       </div>
       <div class="editor-container">
@@ -40,9 +40,9 @@
     <!-- Controls -->
     <div class="live-controls">
       <div class="drag-handle"></div>
-      <div class="pointer icon on"></div>
-      <div class="audio icon on"></div>
-      <div class="video icon on"></div>
+      <div class="pointer round-icon-btn on"></div>
+      <div class="audio round-icon-btn on"></div>
+      <div class="video round-icon-btn on"></div>
     </div>
     <div class="video-container">
       <div class="video-in"></div>
