convert div to video block elements in meeting page

--- a/src/html/meeting.html
+++ b/src/html/meeting.html
@@ -45,8 +45,8 @@
     </div>
 
     <div class="video-container">
-      <div class="video-in"></div>
-      <div class="video-out"></div>
+      <video class="video-in" autoplay="autoplay"></video>
+      <video class="video-out" autoplay="autoplay"></video>
     </div>
   </body>
 </html>
