disable pip in some browsers for video i/o

--- a/src/html/meeting.html
+++ b/src/html/meeting.html
@@ -45,8 +45,16 @@
     </div>
 
     <div class="video-container">
-      <video class="video-in" autoplay="autoplay"></video>
-      <video class="video-out" autoplay="autoplay"></video>
+      <video
+        class="video-in"
+        autoplay="autoplay"
+        disablePictureInPicture
+      ></video>
+      <video
+        class="video-out"
+        autoplay="autoplay"
+        disablePictureInPicture
+      ></video>
     </div>
   </body>
 </html>
