add support for pausing and resuming audio and video

--- a/src/html/meeting.html
+++ b/src/html/meeting.html
@@ -45,16 +45,24 @@
     </div>
 
     <div class="video-container">
-      <video
-        class="video-in"
-        autoplay="autoplay"
-        disablePictureInPicture
-      ></video>
-      <video
-        class="video-out"
-        autoplay="autoplay"
-        disablePictureInPicture
-      ></video>
+      <div class="video-in-container">
+        <video
+          class="video-in"
+          autoplay="autoplay"
+          disablePictureInPicture
+        ></video>
+        <div class="no-video-icon off"></div>
+        <div class="no-audio-icon off"></div>
+      </div>
+      <div class="video-out-container">
+        <video
+          class="video-out"
+          autoplay="autoplay"
+          disablePictureInPicture
+        ></video>
+        <div class="no-video-icon off"></div>
+        <div class="no-audio-icon off"></div>
+      </div>
     </div>
   </body>
 </html>
